objects/CSAPEN_Financial_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_New__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Financial Profile</relationshipLabel>
        <relationshipName>Financial_Profile</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Annual_Report__c</fullName>
        <description>Link to Financial Information</description>
        <label>Annual Report (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_000__c</fullName>
        <description>Company annual revenue in U.S. dollars</description>
        <label>Annual Revenue ($'000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_Local_Currency__c</fullName>
        <description>Company annual revenue in local (country) currency.  Factiva Integration.</description>
        <label>Annual Revenue (Local Currency)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Utilization_URL__c</fullName>
        <description>Link to Financial Information</description>
        <label>Asset Utilization (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CAPEX_000__c</fullName>
        <description>Funds used by a company to acquire or upgrade physical assets such as property, industrial buildings or equipment. This type of outlay is made by companies to maintain or increase the scope of their operation. These expenditures can include everything from repairing a roof to building a brand new factory.</description>
        <label>CAPEX ($ '000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Financial_Statements__c</fullName>
        <description>Link to Financial Information</description>
        <label>Customer Financial Statements (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Data Source Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Deployment No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Expenses_vs_Total_URL__c</fullName>
        <description>Link to Financial Information</description>
        <label>Direct Expenses vs. Total (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Earnings_Call_and_Reports__c</fullName>
        <description>Information about customer earnings calls (date(s), summary call information) and/or key industry reports.  Factiva Integrates.</description>
        <label>Earnings Calls and Reports</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_Spend_000__c</fullName>
        <description>Including but not limited to software, servers, storage, services, security, PCs, networking, and wireless.</description>
        <label>IT Spend ($ '000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key_Performance_Indicators__c</fullName>
        <description>Key Performance Indicators are quantifiable measurements that reflect the critical success factors of an organization. They will differ depending on the organization. A business may have as one of its Key Performance Indicators the percentage of its income that comes from return customers. A school may focus its Key Performance Indicators on graduation rates of its students. A Customer Service Department may have as one of its Key Performance Indicators, in line with overall company KPIs, percentage of customer calls answered in the first minute.</description>
        <label>Key Performance Indicators</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Ratios__c</fullName>
        <description>Key financial ratios for the company, Industry, and S&amp;P, including Sales (Qtr vs yr ago Qtr), P/E ratios, Price-to-‘X’ ratios, and numerous other financial metrics.  For publicly traded companies data is easily accessible using the “Get Financial Profile (Source: Factiva) feature in the “Useful Links” area.  Factiva Integrates.</description>
        <label>Key Ratios</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Letter_to_Shareholders__c</fullName>
        <description>Link to Financial Information</description>
        <label>Letter to Shareholders (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Management_Discussion__c</fullName>
        <description>Link to Financial Information</description>
        <label>Management Discussion and Analysis (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Margins__c</fullName>
        <description>Margins: What is the current margin on their product, cost per minute, % of data services, % of prepaid subscribers.
Current margin on their product(s) and/or service(s).  ‘Margin’ is a ratio of profitability calculated as net income divided by revenues, or net profits divided by sales. It measures how much out of every dollar of sales a company actually keeps in earnings.  Factiva Integrates.</description>
        <label>Margins</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <description>Total # of company employees. Factiva Integrations</description>
        <label>Number of Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEX__c</fullName>
        <description>The expenses that arise during the ordinary course of running a business.  Often these expenses are thought of as the “intangible” expenses as opposed to the physical or tangible expenses. For example, Operating Expense consists of salaries paid to employees, research and development costs, and other misc. charges that must be subtracted from the company’s income.</description>
        <label>OPEX ($ '000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Text field used to capture any other relevant information that will help better understand the Financial Profile.</description>
        <label>Other Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_URL__c</fullName>
        <description>URL field to link to other relevant information.</description>
        <label>Other URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Revenue_Per_Employee__c</fullName>
        <description>Ratio of Revenue per employee, automatically calculated based on ‘Revenue’ and ‘Number of Employees’ fields</description>
        <formula>IF( OR( ISNULL(Number_of_Employees__c),(Number_of_Employees__c &lt;=0) ), 0 ,  (Annual_Revenue_000__c *1000/ Number_of_Employees__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue/Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Trend__c</fullName>
        <description>Revenue Trend. Integrate with Factiva.  Text description outlining company revenue trends in key business area(s).  Factiva Integrates.</description>
        <label>Revenue Trend</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SiteMapIdentifier__c</fullName>
        <description>Determines how the record displays on the site map</description>
        <formula>"Financial Profile"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SiteMapIdentifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Plan_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Account Plan Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Financial_Profile_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Financial Profile Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_Income_Growth_URL__c</fullName>
        <description>Link to Financial Information</description>
        <label>Source of Income Growth (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X10K__c</fullName>
        <description>Link to Financial Information</description>
        <label>10K (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>q10q__c</fullName>
        <description>Link to Financial Information</description>
        <label>10Q (URL)</label>
        <type>Url</type>
    </fields>
    <description>Customer Financials</description>
    <label>Financial Profile</label>
    <nameField>
        <displayFormat>FP{00000}</displayFormat>
        <label>Fin Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Profile</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>